kubernetes/deploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: rrrrrr-deployment
spec:
  selector:
    matchLabels:
      app: rrrrrr
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: rrrrrr
    spec:
      containers:
      - name: rrrrrr
        image: registry-vpc.cn-shanghai.aliyuncs.com/ar_ck/k8s_app:${version} # use sed replace
        ports:
        - containerPort: 80
        - containerPort: 8080
