kubernetes/podDeploy.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: anranpod
  namespace: prod
spec:
  selector:
    matchLabels:
      app: anranpod
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: anranpod
    spec:
      containers:
      - name: anranpod
        image: registry-vpc.cn-shanghai.aliyuncs.com/ar_ck9/k8sapp9:${version} # use sed replace
        ports:
        - containerPort: 80
        - containerPort: 8080
