kubernetes/serviceDeploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: arpod-svc
  namespace: prod
spec:
  ports:
    - name: portmap
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: anranpod
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
